Fix grid being improper size and made ships visible for testing

--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,15 @@
   background-color: rgb(29, 162, 216);
 }
 
-.hit {
+.hit,
+.ship {
   background-color: red;
 }
 
 .miss {
   background-color: blue;
 }
+
 .prtBoard {
   margin: 20px;
 }
